# I-AM-IOS-X

./: BUILD.md  DEPLOYMENT-COMPLETE.md  HYBRID-SUMMARY.md  I-AM-IOS-HYBRID-NETWORK.md  I-AM-landing.html  LICENSE.md  MANIFEST.md  README-COMPLETE.md  README.md  UPGRADE.md  a.js  generate-value-fixed.html  genesis_sw.js  index.html  kernel-adapter.js  main.js  migration-shim.js  network-config.js  ollama-local-ai.js  package.json  preload.js  quick-start.sh  rekernel-dashboard.html  rekernel-esa-bridge.js  rekernel-fork-bridge.js  rekernel.html  server.js  sovereign-bus.js  sovereign-compute-bridge.js  sovereign-handshake.js  sovereign-ledger-bridge.js  sovereign-log.js  sovereign-network-hybrid.js  sovereign-network.js  test-complete-system.js  test-kernel.js
ai-4-iam/: I-AM-AI-OLLAMA3.html  README.md  run.bat  run.sh  sw-subconscience.js
apps/: I-AM-AI-v3.html  app-builder-v2.html  attack.html  generate-value.html  index1.html  presence-sw.js  presence_sw.js  sovereign-notepad.html  sw-subconscience-v3.js
dmr-upgrade/: UPGRADE.md  cli.js  package.json  tsconfig.json
genesis-jsonflow/: app-builder.html  ddc-infrastructure-spec.html  index1.html  planespace-theme.js
rekernel/: INDEX.md  (+5 more)
wasm-kernel/: Cargo.toml
wasm-kernel/src/: lib.rs  main.rs
wasm-kernel/src/boundary/: mod.rs
wasm-kernel/src/emergency/: mod.rs
wasm-kernel/src/governance/: mod.rs
wasm-kernel/src/kernel/: encoding.rs  invariants.rs  transition.rs
wasm-kernel/src/network/: mod.rs
wasm-kernel/src/types/: mod.rs
wasm-kernel/src/verification/: mod.rs
wasm-kernel/src/wasm_abi/: mod.rs
(+82 files in other folders)
